--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 ---
 layout: main_page
 ---
-
-<ul>
+<h1>Latest Blog Posts:</h1>
     {% for post in paginator.posts %}
-    <li>
-        <a href="{{ post.url }}">
-            {{post.title | truncatewords: 10 | capitalize}}
-        </a>
-    </li>
+        <div class="well">
+            <a href="{{ post.url }}">
+                <h2>{{post.title | truncatewords: 10 | capitalize}}</h2>
+            </a>
+            <p>{{ post.excerpt }}</p>
+        </div>
     {% endfor %}
-</ul>
