--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: main_page
     {% for post in paginator.posts %}
         <div class="well">
             <a href="{{ post.url }}">
-                <h2>{{post.title | truncatewords: 10 | capitalize}}</h2>
+                <h2>{{post.title | truncatewords: 10 }}</h2>
             </a>
             <p>{{ post.excerpt }}</p>
         </div>
